@@ -31,7 +31,12 @@ EOF
 
 # Substitute revision and linguas
 linguas=`sed -e '/^#/d' po/LINGUAS`
-revision=`LC_ALL=C svn info $0 | awk '/^Revision: / {printf "%05d\n", $2}'`
+if test -d .git/svn; then
+ revision=`LC_ALL=C git svn find-rev HEAD`
+else
+ revision=`LC_ALL=C svn info $0 | awk '/^Revision: / {printf "%05d\n",
+$2}'`
+fi
 sed -e "s/@LINGUAS@/${linguas}/g" \
     -e "s/@REVISION@/${revision}/g" \
     < "configure.in.in" > "configure.in"
