@@ -1,3 +1,7 @@
+2008-07-10	Jannis Pohlmann <jannis@xfce.org>
+
+	* autogen.sh: Fix @REVISION@ substitution when using git svn.
+
 2008-07-06	Jannis Pohlmann <jannis@xfce.org>
 
 	* libxfce4menu/xfce-menu.c: Add #if 0 around 
